made a DOM tree of main page

--- a/main.html
+++ b/main.html
@@ -7,6 +7,33 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>TEST TASK!</h1>
+    <header class="header">
+        <div class="header__logo">
+            <img src="" class="header__logo_picture" alt="LOGO LOGO" />
+        </div>
+        <nav class="header__nav">
+            <ul class="header__nav_items">
+                <li>Commercial</li>
+                <li>Editorial</li>
+                <li>Reportage</li>
+                <li>Meet me</li>
+            </ul>
+        </nav>
+    </header>
+    <main class="main">
+        <h1 class="main__title">INC LINGERIE</h1>
+        <div class="main__slider">
+            <img src="" class="main__slider_image" alt="1st image" />
+            <img src="" class="main__slider_image" alt="2nd image" />
+            <img src="" class="main__slider_image" alt="3rd image" />
+        </div>
+    </main>
+    <footer class="footer">
+        <div class="footer__social-media">
+            <a href="" class="footer__social-media_item">Inst</a>
+            <span class="footer__social-media_line"></span>
+            <a href="" class="footer__social-media_item">Fb</a>
+        </div>
+    </footer>
 </body>
 </html>
