create and filling of fonts folder and images folder

--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
     <header class="header">
         <div class="header__logo">
-            <img src="" class="header__logo_picture" alt="LOGO LOGO" />
+            <img src="./images/logo.png" class="header__logo_picture" alt="LOGO LOGO" />
         </div>
         <nav class="header__nav">
             <ul class="header__nav_items">
@@ -23,9 +23,9 @@
     <main class="main">
         <h1 class="main__title">INC LINGERIE</h1>
         <div class="main__slider">
-            <img src="" class="main__slider_image" alt="1st image" />
-            <img src="" class="main__slider_image" alt="2nd image" />
-            <img src="" class="main__slider_image" alt="3rd image" />
+            <img src="./images/image1.png" class="main__slider_image" alt="1st image" />
+            <img src="./images/image2.png" class="main__slider_image" alt="2nd image" />
+            <img src="./images/image3.png" class="main__slider_image" alt="3rd image" />
         </div>
     </main>
     <footer class="footer">
