the style file stucture is ordered

--- a/main.html
+++ b/main.html
@@ -13,10 +13,18 @@
         </div>
         <nav class="header__nav">
             <ul class="header__nav_items">
-                <li>Commercial</li>
-                <li>Editorial</li>
-                <li>Reportage</li>
-                <li>Meet me</li>
+                <li>
+                    <a href="">Commercial</a>
+                </li>
+                <li>
+                    <a href="">Editorial</a>
+                </li>
+                <li>
+                    <a href="">Reportage</a>
+                </li>
+                <li>
+                    <a href="">Meet me</a>
+                </li>
             </ul>
         </nav>
     </header>
@@ -29,10 +37,10 @@
         </div>
     </main>
     <footer class="footer">
-        <div class="footer__social-media">
-            <a href="" class="footer__social-media_item">Inst</a>
-            <span class="footer__social-media_line"></span>
-            <a href="" class="footer__social-media_item">Fb</a>
+        <div class="footer__social">
+            <a href="" class="footer__social_item">Inst</a>
+            <span class="footer__social_line"></span>
+            <a href="" class="footer__social_item">Fb</a>
         </div>
     </footer>
 </body>
