done the header block with navigation

--- a/main.html
+++ b/main.html
@@ -8,22 +8,22 @@
 </head>
 <body>
     <header class="header">
-        <div class="header__logo">
-            <img src="./images/logo.png" class="header__logo_picture" alt="LOGO LOGO" />
+        <div class="logo">
+            <img src="./images/logo.png" class="logo__picture" alt="LOGO LOGO" />
         </div>
-        <nav class="header__nav">
-            <ul class="header__nav_items">
-                <li>
-                    <a href="">Commercial</a>
+        <nav class="nav">
+            <ul class="nav__list">
+                <li class="nav__list_item">
+                    <a href="#">Commercial</a>
                 </li>
-                <li>
-                    <a href="">Editorial</a>
+                <li class="nav__list_item">
+                    <a href="#">Editorial</a>
                 </li>
-                <li>
-                    <a href="">Reportage</a>
+                <li class="nav__list_item">
+                    <a href="#">Reportage</a>
                 </li>
-                <li>
-                    <a href="">Meet me</a>
+                <li class="nav__list_item">
+                    <a href="#">Meet me</a>
                 </li>
             </ul>
         </nav>
