added font for the .main-title caption

--- a/main.html
+++ b/main.html
@@ -29,7 +29,7 @@
         </nav>
     </header>
     <main class="main">
-        <h1 class="main__title">INC LINGERIE</h1>
+        <h1 class="main__title">INK LINGERIE</h1>
         <div class="swiper-container">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
