--- a/main.html
+++ b/main.html
@@ -33,7 +33,7 @@
     <main class="main">
         <h1 class="main__title">INK LINGERIE</h1>
         <div class="swiper-container">
-            <div class="swiper-wrapper" id="scene">
+            <div class="swiper-wrapper" >
                 <div class="swiper-slide">
                     <img src="./images/image2.png" class="swiper-slide_image" alt="1st image" />
                 </div>
@@ -53,9 +53,11 @@
             <a href="https://www.facebook.com/kobetsmatviy" target="_blank" class="footer__social_item">Fb</a>
         </div>
     </footer>
+    <div class="background" data-relative-input="true" id="scene">
+        <div class="background__image" data-depth="0.3"></div>
+    </div>
 
-    <!-- JS & CSS files -->
-    
+    <!-- ##### JS & CSS files ##### -->
     <!-- SWIPER SLIDER -->
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
@@ -82,9 +84,14 @@
             }
         })
     </script>
-
     <!-- PARALLAX EFFECT -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
     <script src="./library/parallax.min.js"></script>
+    <script>
+        var scene = document.getElementById('scene');
+        var parallaxInstance = new Parallax(scene, {
+            relativeInput: true
+        });
+    </script>
 </body>
 </html>
