upgraded an action of the menu

--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
                 <div class="nav__toggle--item"></div>
                 <div class="nav__toggle--item"></div>
             </div>
-            <ul class="nav__list">
+            <ul class="nav__list" id="nav__list">
                 <li class="nav__list--item">
                     <a href="#">Commercial</a>
                 </li>
