realize the unique circle cursor and DRAG ME tip

--- a/main.html
+++ b/main.html
@@ -8,6 +8,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
+    <div id="mouse"></div>
+    <div id="mouseMessage">DRAG ME</div>
     <header class="header">
         <div class="logo">
             <a href="https://ebolt.net/" target="_blank">
@@ -21,16 +23,16 @@
             </div>
             <ul class="nav__list" id="nav__list">
                 <li class="nav__list--item">
-                    <a href="#">Commercial</a>
+                    <a href="http://youtube.com/c/kobetsmatviy" target="_blank">Commercial</a>
                 </li>
                 <li class="nav__list--item">
-                    <a href="#">Editorial</a>
+                    <a href="http://korets.in.ua/" target="_blank">Editorial</a>
                 </li>
                 <li class="nav__list--item">
-                    <a href="#">Reportage</a>
+                    <a href="http://workout.korets.in.ua/" target="_blank">Reportage</a>
                 </li>
                 <li class="nav__list--item">
-                    <a href="#">Meet me</a>
+                    <a href="mailto:kobetsmatviy@gmail.com">Meet me</a>
                 </li>
             </ul>
         </nav>
