completion of the task

--- a/main.html
+++ b/main.html
@@ -10,6 +10,12 @@
 <body>
     <div id="mouse"></div>
     <div id="mouseMessage">DRAG ME</div>
+    <div class="preloader">
+        <div class="preloader__row">
+          <div class="preloader__row--item"></div>
+          <div class="preloader__row--item"></div>
+        </div>
+    </div>
     <header class="header">
         <div class="logo">
             <a href="https://ebolt.net/" target="_blank">
